2004-09-14  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.2. 
	  Tag name: "foomatic-db-engine-3_0_2".

	* README, USAGE: Updated for version 3.0.2.

2004-07-30  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Use the manufacturer as defined in the
	  Foomatic database and not the one from the IEEE-1284
	  auto-detection ID string for the "*Manufacturer: ..." tag of the
	  PPD files, as in the IDs the manufacturer names
	  often do not comply with the Adobe specs (as "Hewlett-Packard",
	  "HP" has to be used.

2004-07-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Replaced mechanism for auto-detecting libxml(2).

2004-07-13  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated link to Adobe's PostScript specifications.

2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* README, README.build-foomatic-filters-ppds, USAGE,
	  foomatic-kitload.8.in, foomatic-preferred-driver.in,
	  foomatic-printermap-to-gimp-print-xml.in, lib/Foomatic/DB.pm:
	  Replaced "GIMP-Print" by "Gimp-Print".

2004-03-24  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Added entries to sortargs() function to
	  support drivers with RGB processing and Gimp-Print 5.0.x support
	  for new CMYRBK (additional red and blue ink) printers.

	* foomatic-perl-data.c, foomatic-combo-xml.c: Compatibility fixes
	  for newest gcc.

2004-03-04  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Read paper size with unit out of the driverval
	  (needed for Omni), restrict paper sizes in the PPD to 2 digits
	  after the decimal point.

2004-02-27  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated another Perl warning.

2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.1. 
	  Tag name: "foomatic-db-engine-3_0_1".

	* README, USAGE: Updated for version 3.0.1 final.
